--- a/README
+++ b/README
@@ -4,9 +4,9 @@ DISCLAIMER: Any unauthorized use, including but not limited to, copying or
 redistributing any chunk of the source code (or an entire file) will result in
 punishment by law. I, Sami Badra, own all rights to the files and their contents.
 
-P.S. This source code has already been submitted to Quora, so it is in your best interest
-     NOT to copy ANY of the source code you see here. Quora checks for code similarities
-     from previously submitted version, so you will be noticed and punished.
+P.S. This source code has already been submitted to Quora, so it is in your best
+     interest NOT to copy ANY of the source code you see here. Quora checks for code
+     similarities from previously submitted version, so you will be noticed and punished.
 
 Description:
 This program is a solution which I derived according to one of the challenges found at
