--- a/README
+++ b/README
@@ -6,7 +6,7 @@ punishment by law. I, Sami Badra, own all rights to the files and their contents
 
 P.S. This source code has already been submitted to Quora, so it is in your best
 interest NOT to copy ANY of the source code you see here. Quora checks for code
-similarities from previously submitted version, so you will be noticed and punished.
+similarities from previously submitted version. You will be noticed and punished.
 
 Description:
 This program is a solution which I derived to solve one of the challenges found
